# soul

./: .gitignore  .gitmodules  CMakeLists.txt
include/soul/: cascadia_code_data.hh  config.hh.in  editor.hh  error.hh  events.hh  font_manager.hh  fonts.hh  gui.hh  renderer.hh  shaders.hh  text_engine.hh  textengine.hh  utils.hh  window.hh
shaders/: CMakeLists.txt  fragment.sh  fragment_text.sh  varying_text.def.sc  vertex.sh  vertex_text.sh
source/: CMakeLists.txt
source/file_pack/: CMakeLists.txt  main.cc
source/shader_pack/: CMakeLists.txt  main.cc
source/soul/: CMakeLists.txt  debug.cc  draw_cmd.cc  editor.cc  events.cc  font_manager.cc  fonts.cc.in  gui.cc  main.cc  renderer.cc  shaders.cc.in  sources.cmake  text_engine.cc  textengine.cc  utils.cc  window.cc
tests/: CMakeLists.txt  test_font_manager.cc  test_ft.cc  test_gui.cc  test_main.cc  test_text_engine.cc  test_window.cc
